--- a/myrules.ini
+++ b/myrules.ini
@@ -5,7 +5,7 @@ rename_node=狮城@新加坡
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/myrules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/myrules.yml
 
-exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|ZA|EIP|海外|续费|京|沪港|沪新|沪台|DMIT|Edge|HKT|CHT)
+exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|ZA|EIP|海外|续费|京|沪港|沪新|沪台|DMIT|Edge|HKT|CHT|CMI)
 include_remarks=(HK|US|TW|SG|JP|Hong Kong|United States|Singapore|Japan|Taiwan|香港|新加坡|狮城|日本|美国|台湾)
 
 udp=true
