--- a/myrules.yml
+++ b/myrules.yml
@@ -106,56 +106,6 @@ profile:
   tracing: true
 
 rules:
-  - DOMAIN,lqnmmm.lol,DIRECT
-  - DOMAIN,content1.steampowered.com,DIRECT
-  - DOMAIN,content2.steampowered.com,DIRECT
-  - DOMAIN,content3.steampowered.com,DIRECT
-  - DOMAIN,content4.steampowered.com,DIRECT
-  - DOMAIN,content5.steampowered.com,DIRECT
-  - DOMAIN,content6.steampowered.com,DIRECT
-  - DOMAIN,content7.steampowered.com,DIRECT
-  - DOMAIN,content8.steampowered.com,DIRECT
-  - DOMAIN,client-download.steampowered.com,DIRECT
-  - DOMAIN,content-origin.steampowered.com,DIRECT
-  - DOMAIN,clientconfig.akamai.steamtransparent.com,DIRECT
-  - DOMAIN,steampipe.akamaized.net,DIRECT
-  - DOMAIN,steam.apac.qtlglb.com.mwcloudcdn.com,DIRECT
-  - DOMAIN,cdn1-sea1.valve.net,DIRECT
-  - DOMAIN,cdn2-sea1.valve.net,DIRECT
-  - DOMAIN,steam.apac.qtlglb.com,DIRECT
-  - DOMAIN,edge.steam-dns.top.comcast.net,DIRECT
-  - DOMAIN,edge.steam-dns-2.top.comcast.net,DIRECT
-  - DOMAIN,steam.naeu.qtlglb.com,DIRECT
-  - DOMAIN,steampipe-kr.akamaized.net,DIRECT
-  - DOMAIN,steam.ix.asn.au,DIRECT
-  - DOMAIN,steam.eca.qtlglb.com,DIRECT
-  - DOMAIN,steam.cdn.on.net,DIRECT
-  - DOMAIN,update5.dota2.wmsj.cn,DIRECT
-  - DOMAIN,update2.dota2.wmsj.cn,DIRECT
-  - DOMAIN,update6.dota2.wmsj.cn,DIRECT
-  - DOMAIN,update3.dota2.wmsj.cn,DIRECT
-  - DOMAIN,update1.dota2.wmsj.cn,DIRECT
-  - DOMAIN,update4.dota2.wmsj.cn,DIRECT
-  - DOMAIN,update5.csgo.wmsj.cn,DIRECT
-  - DOMAIN,update2.csgo.wmsj.cn,DIRECT
-  - DOMAIN,update4.csgo.wmsj.cn,DIRECT
-  - DOMAIN,update3.csgo.wmsj.cn,DIRECT
-  - DOMAIN,update6.csgo.wmsj.cn,DIRECT
-  - DOMAIN,update1.csgo.wmsj.cn,DIRECT
-  - DOMAIN,st.dl.bscstorage.net,DIRECT
-  - DOMAIN,cdn.mileweb.cs.steampowered.com.8686c.com,DIRECT
-  - DOMAIN,steamcdn-a.akamaihd.net,DIRECT
-  - DOMAIN-SUFFIX,content.steampowered.com,DIRECT
-  - DOMAIN-SUFFIX,hsar.steampowered.com.edgesuite.net,DIRECT
-  - DOMAIN-SUFFIX,akamai.steamstatic.com,DIRECT
-  - DOMAIN-SUFFIX,cs.steampowered.com,DIRECT
-  - DOMAIN-SUFFIX,cm.steampowered.com,DIRECT
-  - DOMAIN-SUFFIX,edgecast.steamstatic.com,DIRECT
-  - DOMAIN-SUFFIX,steamcontent.com,DIRECT
-  - DOMAIN-SUFFIX,steam-content-dnld-1.apac-1-cdn.cqloud.com,DIRECT
-  - DOMAIN-SUFFIX,steam-content-dnld-1.eu-c1-cdn.cqloud.com,DIRECT
-  - DOMAIN-SUFFIX,steam-content-dnld-1.qwilted-cds.cqloud.com,DIRECT
-  
   - PROCESS-NAME,com.spotify.music,Spotify
   - DOMAIN-SUFFIX,pscdn.co,Spotify
   - DOMAIN-SUFFIX,scdn.co,Spotify
@@ -170,16 +120,42 @@ rules:
   - DOMAIN-SUFFIX,spotilocal.com,Spotify
   - DOMAIN-SUFFIX,tospotify.com,Spotify
   
-  - DOMAIN-SUFFIX,emby.nexitally.com,Emby
+  - DOMAIN,stream.ntrrr.top,Emby
+  - DOMAIN,film.reddust.link,Emby
+  - DOMAIN,e.niceduck.me,Emby
+  - DOMAIN,emby.bangumi.ca,Emby
+  - DOMAIN,film.ohhhh.org,Emby
+  - DOMAIN,direct.mjjemby.org,Emby
+  - DOMAIN,789.123456.al,Emby
+  - DOMAIN,kr.bili.rip,Emby
+  - DOMAIN,line.xmsl.org,Emby
+  - DOMAIN,public.emby.ws,Emby
+  - DOMAIN,o.emby.ws,Emby
+  - DOMAIN,emby.misakaf.org,Emby
+  - DOMAIN,play.charontv.com,Emby
+  - DOMAIN,cf.bili.rip,Emby
+  - DOMAIN,free.emby.eu.org,Emby
+  - DOMAIN,emby.imetyou.top,Emby
+  - DOMAIN,bili.bili.rip,Emby
+  - DOMAIN,4837.bili.rip,Emby
+  - DOMAIN,netlab.bili.rip,Emby
+  - DOMAIN,cfde.xmsl.org,Emby
+  - DOMAIN,pm.xmsl.org,Emby
+  - DOMAIN,cf.imetyou.top,Emby
+  - DOMAIN,fk.imetyou.top,Emby
+  - DOMAIN,kr.imetyou.top,Emby
+  - DOMAIN,sg.imetyou.top,Emby
+  - DOMAIN,chun.imetyou.top,Emby
+  - DOMAIN,emby.pilipiliultra.top,Emby
+  - DOMAIN,emby.pilipiliultra.com,Emby
+  - DOMAIN,emby.aca.best,Emby
+  - DOMAIN,porn.aca.best,Emby
   - DOMAIN,emby.xeton.dev,Emby
   - DOMAIN,emby-misakaf.atomlantis.cloud ,Emby
   - DOMAIN,emby-mix.atomlantis.cloud,Emby
   - DOMAIN,emby.enjoyit.eu.org,Emby
-  - DOMAIN,emby.cn2gias.uk,Emby
-  - DOMAIN,src-emby.cn2gias.uk,Emby
-  - DOMAIN,post.cn2gias.uk,Emby
-  - DOMAIN,test.xttlove.uk
   - DOMAIN-SUFFIX,cn2gias.uk,Emby
+  - DOMAIN-SUFFIX,emby.nexitally.com,Emby
   - DOMAIN-SUFFIX,agahk1.jmsooo.com,Emby
   - DOMAIN-SUFFIX,agajp1.jmsooo.com,Emby
   - DOMAIN-SUFFIX,agasg1.jmsooo.com,Emby
@@ -241,57 +217,7 @@ rules:
   - IP-CIDR,99.181.64.0/18,Twitch,no-resolve
   - IP-CIDR6,2402:2a80::/32,Twitch,no-resolve
   - PROCESS-NAME,tv.twitch.android.app,Twitch
-  
-  - DOMAIN-KEYWORD,epochtimes,REJECT
-  - DOMAIN-SUFFIX,881903.com,REJECT
-  - DOMAIN-SUFFIX,aboluowang.com,REJECT
-  - DOMAIN-SUFFIX,bannedbook.org,REJECT
-  - DOMAIN-SUFFIX,bldaily.com,REJECT
-  - DOMAIN-SUFFIX,china21.org,REJECT
-  - DOMAIN-SUFFIX,chinaaffairs.org,REJECT
-  - DOMAIN-SUFFIX,dajiyuan.com,REJECT
-  - DOMAIN-SUFFIX,dalianmeng.org,REJECT
-  - DOMAIN-SUFFIX,dkn.tv,REJECT
-  - DOMAIN-SUFFIX,dongtaiwang.com,REJECT
-  - DOMAIN-SUFFIX,edoors.com,REJECT
-  - DOMAIN-SUFFIX,epochweekly.com,REJECT
-  - DOMAIN-SUFFIX,falundafa.org,REJECT
-  - DOMAIN-SUFFIX,fgmtv.org,REJECT
-  - DOMAIN-SUFFIX,gardennetworks.com,REJECT
-  - DOMAIN-SUFFIX,gongyiluntan.org,REJECT
-  - DOMAIN-SUFFIX,gpass1.com,REJECT
-  - DOMAIN-SUFFIX,hrichina.org,REJECT
-  - DOMAIN-SUFFIX,huanghuagang.org,REJECT
-  - DOMAIN-SUFFIX,internetfreedom.org,REJECT
-  - DOMAIN-SUFFIX,kanzhongguo.com,REJECT
-  - DOMAIN-SUFFIX,lagranepoca.com,REJECT
-  - DOMAIN-SUFFIX,mh4u.org,REJECT
-  - DOMAIN-SUFFIX,mhradio.org,REJECT
-  - DOMAIN-SUFFIX,minghui.org,REJECT
-  - DOMAIN-SUFFIX,newrealmstudios.ca,REJECT
-  - DOMAIN-SUFFIX,ntdtv.com,REJECT
-  - DOMAIN-SUFFIX,ogate.org,REJECT
-  - DOMAIN-SUFFIX,open.com.hk,REJECT
-  - DOMAIN-SUFFIX,organcare.org.tw,REJECT
-  - DOMAIN-SUFFIX,qxbbs.org,REJECT
-  - DOMAIN-SUFFIX,renminbao.com,REJECT
-  - DOMAIN-SUFFIX,secretchina.com,REJECT
-  - DOMAIN-SUFFIX,shenyun.com,REJECT
-  - DOMAIN-SUFFIX,shenyunperformingarts.org,REJECT
-  - DOMAIN-SUFFIX,shenzhoufilm.com,REJECT
-  - DOMAIN-SUFFIX,soundofhope.org,REJECT
-  - DOMAIN-SUFFIX,theepochtimes.com,REJECT
-  - DOMAIN-SUFFIX,tiandixing.org,REJECT
-  - DOMAIN-SUFFIX,tuidang.org,REJECT
-  - DOMAIN-SUFFIX,velkaepocha.sk,REJECT
-  - DOMAIN-SUFFIX,watchinese.com,REJECT
-  - DOMAIN-SUFFIX,wixsite.com,REJECT
-  - DOMAIN-SUFFIX,wujie.net,REJECT
-  - DOMAIN-SUFFIX,wujieliulan.com,REJECT
-  - DOMAIN-SUFFIX,xinsheng.net,REJECT
-  - DOMAIN-SUFFIX,zhengjian.org,REJECT
-  - DOMAIN-SUFFIX,zhuichaguoji.org,REJECT
-  
+    
   - DOMAIN-SUFFIX,aaplimg.com,Apple
   - DOMAIN-SUFFIX,Apple.co,Apple
   - DOMAIN-SUFFIX,Apple.com,Apple
@@ -539,6 +465,56 @@ rules:
   - DOMAIN-SUFFIX,bidi.net.uk,News
   - DOMAIN-KEYWORD,bbcfmt,News
   - DOMAIN-KEYWORD,uk-live,News
+
+  - DOMAIN-KEYWORD,epochtimes,News
+  - DOMAIN-SUFFIX,881903.com,News
+  - DOMAIN-SUFFIX,aboluowang.com,News
+  - DOMAIN-SUFFIX,bannedbook.org,News
+  - DOMAIN-SUFFIX,bldaily.com,News
+  - DOMAIN-SUFFIX,china21.org,News
+  - DOMAIN-SUFFIX,chinaaffairs.org,News
+  - DOMAIN-SUFFIX,dajiyuan.com,News
+  - DOMAIN-SUFFIX,dalianmeng.org,News
+  - DOMAIN-SUFFIX,dkn.tv,News
+  - DOMAIN-SUFFIX,dongtaiwang.com,News
+  - DOMAIN-SUFFIX,edoors.com,News
+  - DOMAIN-SUFFIX,epochweekly.com,News
+  - DOMAIN-SUFFIX,falundafa.org,News
+  - DOMAIN-SUFFIX,fgmtv.org,News
+  - DOMAIN-SUFFIX,gardennetworks.com,News
+  - DOMAIN-SUFFIX,gongyiluntan.org,News
+  - DOMAIN-SUFFIX,gpass1.com,News
+  - DOMAIN-SUFFIX,hrichina.org,News
+  - DOMAIN-SUFFIX,huanghuagang.org,News
+  - DOMAIN-SUFFIX,internetfreedom.org,News
+  - DOMAIN-SUFFIX,kanzhongguo.com,News
+  - DOMAIN-SUFFIX,lagranepoca.com,News
+  - DOMAIN-SUFFIX,mh4u.org,News
+  - DOMAIN-SUFFIX,mhradio.org,News
+  - DOMAIN-SUFFIX,minghui.org,News
+  - DOMAIN-SUFFIX,newrealmstudios.ca,News
+  - DOMAIN-SUFFIX,ntdtv.com,News
+  - DOMAIN-SUFFIX,ogate.org,News
+  - DOMAIN-SUFFIX,open.com.hk,News
+  - DOMAIN-SUFFIX,organcare.org.tw,News
+  - DOMAIN-SUFFIX,qxbbs.org,News
+  - DOMAIN-SUFFIX,renminbao.com,News
+  - DOMAIN-SUFFIX,secretchina.com,News
+  - DOMAIN-SUFFIX,shenyun.com,News
+  - DOMAIN-SUFFIX,shenyunperformingarts.org,News
+  - DOMAIN-SUFFIX,shenzhoufilm.com,News
+  - DOMAIN-SUFFIX,soundofhope.org,News
+  - DOMAIN-SUFFIX,theepochtimes.com,News
+  - DOMAIN-SUFFIX,tiandixing.org,News
+  - DOMAIN-SUFFIX,tuidang.org,News
+  - DOMAIN-SUFFIX,velkaepocha.sk,News
+  - DOMAIN-SUFFIX,watchinese.com,News
+  - DOMAIN-SUFFIX,wixsite.com,News
+  - DOMAIN-SUFFIX,wujie.net,News
+  - DOMAIN-SUFFIX,wujieliulan.com,News
+  - DOMAIN-SUFFIX,xinsheng.net,News
+  - DOMAIN-SUFFIX,zhengjian.org,News
+  - DOMAIN-SUFFIX,zhuichaguoji.org,News
   
   - DOMAIN,0gr4uqmtt8y41hcjsgrzdrc31.ourdvsss.com,Bilibili
   - DOMAIN,0gr4uqmtt8y41hcjsgrzdrc3s.ourdvsss.com,Bilibili
