--- a/myrules.yml
+++ b/myrules.yml
@@ -1357,6 +1357,7 @@ rules:
 
   - DOMAIN-SUFFIX,peacocktv.com,International-Media
   - DOMAIN-SUFFIX,peacock.com,International-Media
+  - DOMAIN-SUFFIX,plex.tv,International-Media
   - DOMAIN-SUFFIX,c4assets.com,International-Media
   - DOMAIN-SUFFIX,channel4.com,International-Media
   - DOMAIN-SUFFIX,abema.io,International-Media
@@ -1481,10 +1482,6 @@ rules:
   - DOMAIN-SUFFIX,i.snssdk.com,Douyin
   - DOMAIN-SUFFIX,dig.bdurl.net,Douyin
   
-  - DOMAIN-SUFFIX,iqiyi.com,China-Media
-  - DOMAIN-SUFFIX,71.am,China-Media
-  - DOMAIN-SUFFIX,bilibili.com,China-Media
-  - DOMAIN,upos-hz-mirrorakam.akamaized.net,China-Media
   - DOMAIN-SUFFIX,17gouwuba.com,Hijacking
   - DOMAIN-SUFFIX,186078.com,Hijacking
   - DOMAIN-SUFFIX,189zj.cn,Hijacking
@@ -1674,191 +1671,188 @@ rules:
   - DOMAIN-SUFFIX,yuanchengxiezuo.com,Hijacking
   - DOMAIN-SUFFIX,zbrushcn.com,Hijacking
   - DOMAIN-SUFFIX,zhzzx.com,Hijacking
-  - DOMAIN-SUFFIX,taichi-maker.com,China-Websites
-  - DOMAIN-SUFFIX,leaguehd.com,China-Websites
-  - DOMAIN-SUFFIX,plex.tv,China-Websites
-  - DOMAIN-SUFFIX,qhres.com,China-Websites
-  - DOMAIN-SUFFIX,qhres.com,China-Websites
-  - DOMAIN-SUFFIX,qhimg.com,China-Websites
-  - DOMAIN-SUFFIX,akadns.net,China-Websites
-  - DOMAIN-SUFFIX,alibaba.com,China-Websites
-  - DOMAIN-SUFFIX,alicdn.com,China-Websites
-  - DOMAIN-SUFFIX,alikunlun.com,China-Websites
-  - DOMAIN-SUFFIX,alipay.com,China-Websites
-  - DOMAIN-SUFFIX,amap.com,China-Websites
-  - DOMAIN-SUFFIX,dingtalk.com,China-Websites
-  - DOMAIN-SUFFIX,taobao.com,China-Websites
-  - DOMAIN-SUFFIX,tmall.com,China-Websites
-  - DOMAIN-SUFFIX,tmall.hk,China-Websites
-  - DOMAIN-SUFFIX,ykimg.com,China-Websites
-  - DOMAIN-SUFFIX,youku.com,China-Websites
-  - DOMAIN-SUFFIX,xiami.com,China-Websites
-  - DOMAIN-SUFFIX,xiami.net,China-Websites
-  - DOMAIN-SUFFIX,baidu.com,China-Websites
-  - DOMAIN-SUFFIX,baidubcr.com,China-Websites
-  - DOMAIN-SUFFIX,bdstatic.com,China-Websites
-  - DOMAIN-SUFFIX,acgvideo.com,China-Websites
-  - DOMAIN-SUFFIX,biliapi.com,China-Websites
-  - DOMAIN-SUFFIX,biliapi.net,China-Websites
-  - DOMAIN-SUFFIX,bilibili.com,China-Websites
-  - DOMAIN-SUFFIX,hdslb.com,China-Websites
-  - DOMAIN-SUFFIX,feiliao.com,China-Websites
-  - DOMAIN-SUFFIX,pstatp.com,China-Websites
-  - DOMAIN-SUFFIX,snssdk.com,China-Websites
-  - DOMAIN-SUFFIX,iesdouyin.com,China-Websites
-  - DOMAIN-SUFFIX,toutiao.com,China-Websites
-  - DOMAIN-SUFFIX,343480.com,China-Websites
-  - DOMAIN-SUFFIX,baduziyuan.com,China-Websites
-  - DOMAIN-SUFFIX,com-hs-hkdy.com,China-Websites
-  - DOMAIN-SUFFIX,czybjz.com,China-Websites
-  - DOMAIN-SUFFIX,dandanzan.com,China-Websites
-  - DOMAIN-SUFFIX,fjhps.com,China-Websites
-  - DOMAIN-SUFFIX,kuyunbo.club,China-Websites
-  - DOMAIN-SUFFIX,21cn.com,China-Websites
-  - DOMAIN-SUFFIX,hitv.com,China-Websites
-  - DOMAIN-SUFFIX,mgtv.com,China-Websites
-  - DOMAIN-SUFFIX,iqiyi.com,China-Websites
-  - DOMAIN-SUFFIX,iqiyipic.com,China-Websites
-  - DOMAIN-SUFFIX,71.am.com,China-Websites
-  - DOMAIN-SUFFIX,jd.com,China-Websites
-  - DOMAIN-SUFFIX,jd.hk,China-Websites
-  - DOMAIN-SUFFIX,360buyimg.com,China-Websites
-  - DOMAIN-SUFFIX,iciba.com,China-Websites
-  - DOMAIN-SUFFIX,ksosoft.com,China-Websites
-  - DOMAIN-SUFFIX,meitu.com,China-Websites
-  - DOMAIN-SUFFIX,meitudata.com,China-Websites
-  - DOMAIN-SUFFIX,meitustat.com,China-Websites
-  - DOMAIN-SUFFIX,meipai.com,China-Websites
-  - DOMAIN-SUFFIX,duokan.com,China-Websites
-  - DOMAIN-SUFFIX,mi-img.com,China-Websites
-  - DOMAIN-SUFFIX,miui.com,China-Websites
-  - DOMAIN-SUFFIX,xiaomi.com,China-Websites
-  - DOMAIN-SUFFIX,microsoft.com,China-Websites
-  - DOMAIN-SUFFIX,windows.com,China-Websites
-  - DOMAIN-SUFFIX,windowsupdate.com,China-Websites
-  - DOMAIN-SUFFIX,visualstudio.com,China-Websites
-  - DOMAIN-SUFFIX,msecnd.net,China-Websites
-  - DOMAIN,officecdn-microsoft-com.akamaized.net,China-Websites
-  - DOMAIN-SUFFIX,163.com,China-Websites
-  - DOMAIN-SUFFIX,126.net,China-Websites
-  - DOMAIN-SUFFIX,127.net,China-Websites
-  - DOMAIN-SUFFIX,163yun.com,China-Websites
-  - DOMAIN-SUFFIX,lofter.com,China-Websites
-  - DOMAIN-SUFFIX,ydstatic.com,China-Websites
-  - DOMAIN-SUFFIX,sina.com,China-Websites
-  - DOMAIN-SUFFIX,weibo.com,China-Websites
-  - DOMAIN-SUFFIX,sohu.com,China-Websites
-  - DOMAIN-SUFFIX,sohucs.com,China-Websites
-  - DOMAIN-SUFFIX,sohu-inc.com,China-Websites
-  - DOMAIN-SUFFIX,v-56.com,China-Websites
-  - DOMAIN-SUFFIX,sogo.com,China-Websites
-  - DOMAIN-SUFFIX,sogou.com,China-Websites
-  - DOMAIN-SUFFIX,sogoucdn.com,China-Websites
-  - DOMAIN-SUFFIX,qq.com,China-Websites
-  - DOMAIN-SUFFIX,tencent.com,China-Websites
-  - DOMAIN-SUFFIX,jstucdn.com,China-Websites
-  - DOMAIN-SUFFIX,zimuzu.io,China-Websites
-  - DOMAIN-SUFFIX,zimuzu.tv,China-Websites
-  - DOMAIN-SUFFIX,zmz2019.com,China-Websites
-  - DOMAIN-SUFFIX,zmzapi.com,China-Websites
-  - DOMAIN-SUFFIX,zmzapi.net,China-Websites
-  - DOMAIN-SUFFIX,zmzfile.com,China-Websites
-  - DOMAIN-SUFFIX,chinanetcenter.com,China-Websites
-  - DOMAIN-SUFFIX,wangsu.com,China-Websites
-  - DOMAIN-SUFFIX,meixincdn.com,China-Websites
-  - DOMAIN-SUFFIX,ipip.net,China-Websites
-  - DOMAIN-SUFFIX,ip.la,China-Websites
-  - DOMAIN-SUFFIX,ip-cdn.com,China-Websites
-  - DOMAIN-SUFFIX,ipv6-test.com,China-Websites
-  - DOMAIN-SUFFIX,test-ipv6.com,China-Websites
-  - DOMAIN-SUFFIX,whatismyip.com,China-Websites
-  - DOMAIN,ip.bjango.com,China-Websites
-  - DOMAIN-SUFFIX,netspeedtestmaster.com,China-Websites
-  - DOMAIN,speedtest.macpaw.com,China-Websites
-  - DOMAIN-SUFFIX,awesome-hd.me,China-Websites
-  - DOMAIN-SUFFIX,broadcasthe.net,China-Websites
-  - DOMAIN-SUFFIX,chdbits.co,China-Websites
-  - DOMAIN-SUFFIX,classix-unlimited.co.uk,China-Websites
-  - DOMAIN-SUFFIX,empornium.me,China-Websites
-  - DOMAIN-SUFFIX,gazellegames.net,China-Websites
-  - DOMAIN-SUFFIX,hdchina.org,China-Websites
-  - DOMAIN-SUFFIX,hdsky.me,China-Websites
-  - DOMAIN-SUFFIX,jpopsuki.eu,China-Websites
-  - DOMAIN-SUFFIX,keepfrds.com,China-Websites
-  - DOMAIN-SUFFIX,m-team.cc,China-Websites
-  - DOMAIN-SUFFIX,nanyangpt.com,China-Websites
-  - DOMAIN-SUFFIX,ncore.cc,China-Websites
-  - DOMAIN-SUFFIX,open.cd,China-Websites
-  - DOMAIN-SUFFIX,ourbits.club,China-Websites
-  - DOMAIN-SUFFIX,passthepopcorn.me,China-Websites
-  - DOMAIN-SUFFIX,privatehd.to,China-Websites
-  - DOMAIN-SUFFIX,redacted.ch,China-Websites
-  - DOMAIN-SUFFIX,springsunday.net,China-Websites
-  - DOMAIN-SUFFIX,tjupt.org,China-Websites
-  - DOMAIN-SUFFIX,totheglory.im,China-Websites
-  - DOMAIN-SUFFIX,cn,China-Websites
-  - DOMAIN-SUFFIX,8686c.com,China-Websites
-  - DOMAIN-SUFFIX,aixifan.com,China-Websites
-  - DOMAIN-SUFFIX,beitaichufang.com,China-Websites
-  - DOMAIN-SUFFIX,booking.com,China-Websites
-  - DOMAIN-SUFFIX,bstatic.com,China-Websites
-  - DOMAIN-SUFFIX,cailianpress.com,China-Websites
-  - DOMAIN-SUFFIX,chunyu.mobi,China-Websites
-  - DOMAIN-SUFFIX,chushou.tv,China-Websites
-  - DOMAIN-SUFFIX,cmbchina.com,China-Websites
-  - DOMAIN-SUFFIX,cmbimg.com,China-Websites
-  - DOMAIN-SUFFIX,ctrip.com,China-Websites
-  - DOMAIN-SUFFIX,dfcfw.com,China-Websites
-  - DOMAIN-SUFFIX,douban.com,China-Websites
-  - DOMAIN-SUFFIX,doubanio.com,China-Websites
-  - DOMAIN-SUFFIX,douyu.com,China-Websites
-  - DOMAIN-SUFFIX,dxycdn.com,China-Websites
-  - DOMAIN-SUFFIX,eastmoney.com,China-Websites
-  - DOMAIN-SUFFIX,futunn.com,China-Websites
-  - DOMAIN-SUFFIX,geilicdn.com,China-Websites
-  - DOMAIN-SUFFIX,hicloud.com,China-Websites
-  - DOMAIN-SUFFIX,hostbuf.com,China-Websites
-  - DOMAIN-SUFFIX,huya.com,China-Websites
-  - DOMAIN-SUFFIX,infinitynewtab.com,China-Websites
-  - DOMAIN-SUFFIX,ithome.com,China-Websites
-  - DOMAIN-SUFFIX,keepcdn.com,China-Websites
-  - DOMAIN-SUFFIX,kkmh.com,China-Websites
-  - DOMAIN-SUFFIX,luojilab.com,China-Websites
-  - DOMAIN-SUFFIX,maoyun.tv,China-Websites
-  - DOMAIN-SUFFIX,meituan.net,China-Websites
-  - DOMAIN-SUFFIX,mobike.com,China-Websites
-  - DOMAIN-SUFFIX,mubu.com,China-Websites
-  - DOMAIN-SUFFIX,myzaker.com,China-Websites
-  - DOMAIN-SUFFIX,nvidia.com,China-Websites
-  - DOMAIN-SUFFIX,paypal.com,China-Websites
-  - DOMAIN-SUFFIX,paypalobjects.com,China-Websites
-  - DOMAIN-SUFFIX,qyer.com,China-Websites
-  - DOMAIN-SUFFIX,qyerstatic.com,China-Websites
-  - DOMAIN-SUFFIX,ronghub.com,China-Websites
-  - DOMAIN-SUFFIX,ruguoapp.com,China-Websites
-  - DOMAIN-SUFFIX,smzdm.com,China-Websites
-  - DOMAIN-SUFFIX,snapdrop.net,China-Websites
-  - DOMAIN-SUFFIX,sspai.com,China-Websites
-  - DOMAIN-SUFFIX,teamviewer.com,China-Websites
-  - DOMAIN-SUFFIX,tianyancha.com,China-Websites
-  - DOMAIN-SUFFIX,udacity.com,China-Websites
-  - DOMAIN-SUFFIX,uning.com,China-Websites
-  - DOMAIN-SUFFIX,weather.com,China-Websites
-  - DOMAIN-SUFFIX,weidian.com,China-Websites
-  - DOMAIN-SUFFIX,xmcdn.com,China-Websites
-  - DOMAIN-SUFFIX,yangkeduo.com,China-Websites
-  - DOMAIN-SUFFIX,zhangzishi.cc,China-Websites
-  - DOMAIN-SUFFIX,zhihu.com,China-Websites
-  - DOMAIN-SUFFIX,zhimg.com,China-Websites
-  - DOMAIN-SUFFIX,zhuihd.com,China-Websites
-  - DOMAIN,download.jetbrains.com,China-Websites
-  - DOMAIN-SUFFIX,local,China-Websites
-  - DOMAIN,mtalk.google.com,China-Websites
-  - IP-CIDR,192.168.0.0/16,China-Websites
-  - IP-CIDR,10.0.0.0/8,China-Websites
-  - IP-CIDR,172.16.0.0/12,China-Websites
-  - IP-CIDR,127.0.0.0/8,China-Websites
-  - IP-CIDR,100.64.0.0/10,China-Websites
+
+  - DOMAIN-SUFFIX,taichi-maker.com,Domestic
+  - DOMAIN-SUFFIX,leaguehd.com,Domestic
+  - DOMAIN-SUFFIX,qhres.com,Domestic
+  - DOMAIN-SUFFIX,qhres.com,Domestic
+  - DOMAIN-SUFFIX,qhimg.com,Domestic
+  - DOMAIN-SUFFIX,akadns.net,Domestic
+  - DOMAIN-SUFFIX,alibaba.com,Domestic
+  - DOMAIN-SUFFIX,alicdn.com,Domestic
+  - DOMAIN-SUFFIX,alikunlun.com,Domestic
+  - DOMAIN-SUFFIX,alipay.com,Domestic
+  - DOMAIN-SUFFIX,amap.com,Domestic
+  - DOMAIN-SUFFIX,dingtalk.com,Domestic
+  - DOMAIN-SUFFIX,douyu.com,Domestic
+  - DOMAIN-SUFFIX,huya.com,Domestic
+  - DOMAIN-SUFFIX,taobao.com,Domestic
+  - DOMAIN-SUFFIX,tmall.com,Domestic
+  - DOMAIN-SUFFIX,tmall.hk,Domestic
+  - DOMAIN-SUFFIX,ykimg.com,Domestic
+  - DOMAIN-SUFFIX,youku.com,Domestic
+  - DOMAIN-SUFFIX,xiami.com,Domestic
+  - DOMAIN-SUFFIX,xiami.net,Domestic
+  - DOMAIN-SUFFIX,baidu.com,Domestic
+  - DOMAIN-SUFFIX,baidubcr.com,Domestic
+  - DOMAIN-SUFFIX,bdstatic.com,Domestic
+  - DOMAIN-SUFFIX,acgvideo.com,Domestic
+  - DOMAIN-SUFFIX,hdslb.com,Domestic
+  - DOMAIN-SUFFIX,feiliao.com,Domestic
+  - DOMAIN-SUFFIX,pstatp.com,Domestic
+  - DOMAIN-SUFFIX,snssdk.com,Domestic
+  - DOMAIN-SUFFIX,iesdouyin.com,Domestic
+  - DOMAIN-SUFFIX,toutiao.com,Domestic
+  - DOMAIN-SUFFIX,343480.com,Domestic
+  - DOMAIN-SUFFIX,baduziyuan.com,Domestic
+  - DOMAIN-SUFFIX,com-hs-hkdy.com,Domestic
+  - DOMAIN-SUFFIX,czybjz.com,Domestic
+  - DOMAIN-SUFFIX,dandanzan.com,Domestic
+  - DOMAIN-SUFFIX,fjhps.com,Domestic
+  - DOMAIN-SUFFIX,kuyunbo.club,Domestic
+  - DOMAIN-SUFFIX,21cn.com,Domestic
+  - DOMAIN-SUFFIX,hitv.com,Domestic
+  - DOMAIN-SUFFIX,mgtv.com,Domestic
+  - DOMAIN-SUFFIX,71.am.com,Domestic
+  - DOMAIN-SUFFIX,jd.com,Domestic
+  - DOMAIN-SUFFIX,jd.hk,Domestic
+  - DOMAIN-SUFFIX,360buyimg.com,Domestic
+  - DOMAIN-SUFFIX,iciba.com,Domestic
+  - DOMAIN-SUFFIX,ksosoft.com,Domestic
+  - DOMAIN-SUFFIX,meitu.com,Domestic
+  - DOMAIN-SUFFIX,meitudata.com,Domestic
+  - DOMAIN-SUFFIX,meitustat.com,Domestic
+  - DOMAIN-SUFFIX,meipai.com,Domestic
+  - DOMAIN-SUFFIX,duokan.com,Domestic
+  - DOMAIN-SUFFIX,mi-img.com,Domestic
+  - DOMAIN-SUFFIX,miui.com,Domestic
+  - DOMAIN-SUFFIX,xiaomi.com,Domestic
+  - DOMAIN-SUFFIX,microsoft.com,Domestic
+  - DOMAIN-SUFFIX,windows.com,Domestic
+  - DOMAIN-SUFFIX,windowsupdate.com,Domestic
+  - DOMAIN-SUFFIX,visualstudio.com,Domestic
+  - DOMAIN-SUFFIX,msecnd.net,Domestic
+  - DOMAIN-SUFFIX,163.com,Domestic
+  - DOMAIN-SUFFIX,126.net,Domestic
+  - DOMAIN-SUFFIX,127.net,Domestic
+  - DOMAIN-SUFFIX,163yun.com,Domestic
+  - DOMAIN-SUFFIX,lofter.com,Domestic
+  - DOMAIN-SUFFIX,ydstatic.com,Domestic
+  - DOMAIN-SUFFIX,sina.com,Domestic
+  - DOMAIN-SUFFIX,weibo.com,Domestic
+  - DOMAIN-SUFFIX,sohu.com,Domestic
+  - DOMAIN-SUFFIX,sohucs.com,Domestic
+  - DOMAIN-SUFFIX,sohu-inc.com,Domestic
+  - DOMAIN-SUFFIX,v-56.com,Domestic
+  - DOMAIN-SUFFIX,sogo.com,Domestic
+  - DOMAIN-SUFFIX,sogou.com,Domestic
+  - DOMAIN-SUFFIX,sogoucdn.com,Domestic
+  - DOMAIN-SUFFIX,qq.com,Domestic
+  - DOMAIN-SUFFIX,tencent.com,Domestic
+  - DOMAIN-SUFFIX,jstucdn.com,Domestic
+  - DOMAIN-SUFFIX,zimuzu.io,Domestic
+  - DOMAIN-SUFFIX,zimuzu.tv,Domestic
+  - DOMAIN-SUFFIX,zmz2019.com,Domestic
+  - DOMAIN-SUFFIX,zmzapi.com,Domestic
+  - DOMAIN-SUFFIX,zmzapi.net,Domestic
+  - DOMAIN-SUFFIX,zmzfile.com,Domestic
+  - DOMAIN-SUFFIX,chinanetcenter.com,Domestic
+  - DOMAIN-SUFFIX,wangsu.com,Domestic
+  - DOMAIN-SUFFIX,meixincdn.com,Domestic
+  - DOMAIN-SUFFIX,ipip.net,Domestic
+  - DOMAIN-SUFFIX,ip.la,Domestic
+  - DOMAIN-SUFFIX,ip-cdn.com,Domestic
+  - DOMAIN-SUFFIX,ipv6-test.com,Domestic
+  - DOMAIN-SUFFIX,test-ipv6.com,Domestic
+  - DOMAIN-SUFFIX,whatismyip.com,Domestic
+  - DOMAIN,ip.bjango.com,Domestic
+  - DOMAIN-SUFFIX,netspeedtestmaster.com,Domestic
+  - DOMAIN-SUFFIX,awesome-hd.me,Domestic
+  - DOMAIN-SUFFIX,broadcasthe.net,Domestic
+  - DOMAIN-SUFFIX,chdbits.co,Domestic
+  - DOMAIN-SUFFIX,classix-unlimited.co.uk,Domestic
+  - DOMAIN-SUFFIX,empornium.me,Domestic
+  - DOMAIN-SUFFIX,gazellegames.net,Domestic
+  - DOMAIN-SUFFIX,hdchina.org,Domestic
+  - DOMAIN-SUFFIX,hdsky.me,Domestic
+  - DOMAIN-SUFFIX,jpopsuki.eu,Domestic
+  - DOMAIN-SUFFIX,keepfrds.com,Domestic
+  - DOMAIN-SUFFIX,m-team.cc,Domestic
+  - DOMAIN-SUFFIX,nanyangpt.com,Domestic
+  - DOMAIN-SUFFIX,ncore.cc,Domestic
+  - DOMAIN-SUFFIX,open.cd,Domestic
+  - DOMAIN-SUFFIX,ourbits.club,Domestic
+  - DOMAIN-SUFFIX,passthepopcorn.me,Domestic
+  - DOMAIN-SUFFIX,privatehd.to,Domestic
+  - DOMAIN-SUFFIX,redacted.ch,Domestic
+  - DOMAIN-SUFFIX,springsunday.net,Domestic
+  - DOMAIN-SUFFIX,tjupt.org,Domestic
+  - DOMAIN-SUFFIX,totheglory.im,Domestic
+  - DOMAIN-SUFFIX,cn,Domestic
+  - DOMAIN-SUFFIX,8686c.com,Domestic
+  - DOMAIN-SUFFIX,aixifan.com,Domestic
+  - DOMAIN-SUFFIX,beitaichufang.com,Domestic
+  - DOMAIN-SUFFIX,booking.com,Domestic
+  - DOMAIN-SUFFIX,bstatic.com,Domestic
+  - DOMAIN-SUFFIX,cailianpress.com,Domestic
+  - DOMAIN-SUFFIX,chunyu.mobi,Domestic
+  - DOMAIN-SUFFIX,chushou.tv,Domestic
+  - DOMAIN-SUFFIX,cmbchina.com,Domestic
+  - DOMAIN-SUFFIX,cmbimg.com,Domestic
+  - DOMAIN-SUFFIX,ctrip.com,Domestic
+  - DOMAIN-SUFFIX,dfcfw.com,Domestic
+  - DOMAIN-SUFFIX,douban.com,Domestic
+  - DOMAIN-SUFFIX,doubanio.com,Domestic
+  - DOMAIN-SUFFIX,douyu.com,Domestic
+  - DOMAIN-SUFFIX,dxycdn.com,Domestic
+  - DOMAIN-SUFFIX,eastmoney.com,Domestic
+  - DOMAIN-SUFFIX,futunn.com,Domestic
+  - DOMAIN-SUFFIX,geilicdn.com,Domestic
+  - DOMAIN-SUFFIX,hicloud.com,Domestic
+  - DOMAIN-SUFFIX,hostbuf.com,Domestic
+  - DOMAIN-SUFFIX,huya.com,Domestic
+  - DOMAIN-SUFFIX,infinitynewtab.com,Domestic
+  - DOMAIN-SUFFIX,ithome.com,Domestic
+  - DOMAIN-SUFFIX,keepcdn.com,Domestic
+  - DOMAIN-SUFFIX,kkmh.com,Domestic
+  - DOMAIN-SUFFIX,luojilab.com,Domestic
+  - DOMAIN-SUFFIX,maoyun.tv,Domestic
+  - DOMAIN-SUFFIX,meituan.net,Domestic
+  - DOMAIN-SUFFIX,mobike.com,Domestic
+  - DOMAIN-SUFFIX,mubu.com,Domestic
+  - DOMAIN-SUFFIX,myzaker.com,Domestic
+  - DOMAIN-SUFFIX,nvidia.com,Domestic
+  - DOMAIN-SUFFIX,paypal.com,Domestic
+  - DOMAIN-SUFFIX,paypalobjects.com,Domestic
+  - DOMAIN-SUFFIX,qyer.com,Domestic
+  - DOMAIN-SUFFIX,qyerstatic.com,Domestic
+  - DOMAIN-SUFFIX,ronghub.com,Domestic
+  - DOMAIN-SUFFIX,ruguoapp.com,Domestic
+  - DOMAIN-SUFFIX,smzdm.com,Domestic
+  - DOMAIN-SUFFIX,snapdrop.net,Domestic
+  - DOMAIN-SUFFIX,sspai.com,Domestic
+  - DOMAIN-SUFFIX,teamviewer.com,Domestic
+  - DOMAIN-SUFFIX,tianyancha.com,Domestic
+  - DOMAIN-SUFFIX,udacity.com,Domestic
+  - DOMAIN-SUFFIX,uning.com,Domestic
+  - DOMAIN-SUFFIX,weather.com,Domestic
+  - DOMAIN-SUFFIX,weidian.com,Domestic
+  - DOMAIN-SUFFIX,xmcdn.com,Domestic
+  - DOMAIN-SUFFIX,yangkeduo.com,Domestic
+  - DOMAIN-SUFFIX,zhangzishi.cc,Domestic
+  - DOMAIN-SUFFIX,zhihu.com,Domestic
+  - DOMAIN-SUFFIX,zhimg.com,Domestic
+  - DOMAIN-SUFFIX,zhuihd.com,Domestic
+  - DOMAIN,download.jetbrains.com,Domestic
+  - DOMAIN-SUFFIX,local,Domestic
+  - DOMAIN,mtalk.google.com,Domestic
+  - DOMAIN,officecdn-microsoft-com.akamaized.net,Domestic
+  - DOMAIN,upos-hz-mirrorakam.akamaized.net,Domestic
+  - IP-CIDR,192.168.0.0/16,Domestic
+  - IP-CIDR,10.0.0.0/8,Domestic
+  - IP-CIDR,172.16.0.0/12,Domestic
+  - IP-CIDR,127.0.0.0/8,Domestic
+  - IP-CIDR,100.64.0.0/10,Domestic
 
   - DOMAIN-SUFFIX,flightpacific.net,Final
   - DOMAIN-SUFFIX,nexitallysecure.com,Final
@@ -2395,5 +2389,5 @@ rules:
   - DOMAIN-SUFFIX,wolframalpha.com,Final
   - DOMAIN-SUFFIX,x-art.com,Final
   - DOMAIN-SUFFIX,yimg.com,Final
-  - GEOIP,CN,China-Websites
+  - GEOIP,CN,Domestic
   - MATCH,Final
