--- a/myrules.ini
+++ b/myrules.ini
@@ -1,5 +1,5 @@
 [custom]
-rename_node=🇨🇳@🇼🇸
+rename_node=🇨🇳@🇹🇼
 rename_node=狮城@新加坡
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/myrules.txt
