--- a/myrules.ini
+++ b/myrules.ini
@@ -1,12 +1,18 @@
 [custom]
 rename_node=🇨🇳@🇹🇼
-rename_node=狮城@新加坡
+rename_node=新加坡@SG-
+rename_node=香港@HK-
+rename_node=台湾@TW-
+rename_node=美国@US-
+rename_node=日本@JP-
+rename_node=英国@UK-
+rename_node=德国@DE-
+rename_node=韩国@KR-
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/myrules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/myrules.yml
 
-exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|ZA|EIP|海外|续费|京|沪港|沪新|沪台|DMIT|Edge|HKT|CHT|CMI)
-include_remarks=(HK|US|TW|SG|JP|KR|Hong Kong|United States|Singapore|Japan|Taiwan|Korea|韩国|香港|新加坡|狮城|日本|美国|台湾)
+exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|海外|续费)
 
 udp=true
 sort=true
