--- a/myrules.ini
+++ b/myrules.ini
@@ -12,7 +12,7 @@ rename_node=韩国 @KR-
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/myrules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/myrules.yml
 
-exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|海外|续费)
+exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|海外|续费|油佬)
 
 udp=true
 sort=true
