--- a/myrules.ini
+++ b/myrules.ini
@@ -8,6 +8,8 @@ rename_node=日本 @JP-
 rename_node=英国 @UK-
 rename_node=德国 @DE-
 rename_node=韩国 @KR-
+rename_node=Premium@Pre
+rename_node=广佬专属节点@Nearoute
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/myrules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/myrules.yml
